--- a/experiments/initialtest.html
+++ b/experiments/initialtest.html
@@ -9,20 +9,61 @@
         }
 
         .box {
+            color: #333;
             display: block;
             margin: 15px auto;
-            max-width: 800px;
+            max-width: 900px;
+
+            font-family: sans-serif
+        }
+
+        #out {
+            min-height: 300px;
             background-color: #f5f5f5;
             box-shadow: 0 0 10px 0 #ddd;
             border-radius: 4px;
             border: 1px solid #ddd;
-            padding: 5px;
-            font-family: sans-serif
+            padding: 10px;
+            overflow: auto;
         }
 
-        #out>* {
+        #out * {
             display: block;
+            margin: 10px 0;
+        }
+
+        #out>article {
+            border-top: 1px solid #aaa;
+            padding: 10px;
+            width: 49%;
+        }
+
+        .think {
+            float: right;
+        }
+
+        .code {
+            color: #777;
+            font-family: monospace;
+            font-size: 0.9em;
+        }
+
+        .basic {
+            float: left;
+        }
+
+        #out>i {
+            clear: both;
+        }
+
+        .samples>button {
+            display: inline-block;
+            background: #ddd;
+            border-radius: 5px;
+            border: none;
+            outline: none;
             margin: 5px;
+            cursor: pointer;
         }
 
         #in {
@@ -30,6 +71,7 @@
             width: 100%;
             border: none;
             border-top: 1px solid #aaa;
+            outline: none;
             background: transparent;
             margin: 10px auto;
             padding: 5px;
@@ -40,130 +82,239 @@
 <body>
     <div class="box">
 
+        <div class="samples"></div>
+        <input type="text" id="in" placeholder="prompt">
         <div id="out"></div>
-        <input type="text" id="in" value="How many Rs in rare strawberry arrangement?">
-        <input type="checkbox" checked title="think fast and slow" id="toggle" />
+
     </div>
 
     <script>
-        let model;
+        let responderSystemPromptOnce = `Write an answer to the Q in full sentence. Always use Data for the answer.
+
+Examples:
+Q: "What's 44 divided by 17?"
+Data: 
+{ result: 2.588235294117647 }
+Answer: 
+When you adivide 44 by 17 you get 2.588235294117647
+
+Q: "Who was Romulus?"
+Data: 
+{ "romulus": ["king", "Rome", "first"] }
+Answer: 
+Romulus was the first king of Rome
+
+End of Examples.
+
+`;
+
+        const coderSystemPrompt = `Convert user question to JavaScript code that solves it. Assign answer to 'result'.
+Output ONLY JavaScript code. NO raw text, NO explanations, NO markdown.
+
+Examples:
+
+User: "What is 45 plus 67?"
+Code: 
+result = { sum: 45 + 67 }
+
+User: "How many letters u are in unbounded?"
+Code: 
+result = { 
+  "letters u": \`unbounded\`.split('').filter(c => c === 'r').length
+}
+
+User: "How many times does D appear in unbounded?"
+Code: 
+result = {
+  "letters d": \`unbounded\`.match(/d/ig).length
+}
+
+User: "Is 'hello' longer than 3 characters?"
+Code: 
+result = {
+  "length": \`hello\`.length,
+  "isLonger": \`hello\`.length > 3
+}
+
+User: "What's 15% of 200?"
+Code: 
+result = { value: 200 * 0.15 }
+
+User: "How many words in 'the quick brown fox'?"
+Code: 
+result = {
+  words: \`the quick brown fox\`.split(' ').length
+}
+
+User: "What is the third character of 'hello'?"
+Code: 
+result = { character: \`hello\`[2] }
+
+User: "If I invest $1000 at 5% interest for 3 years, compounded annually?"
+Code: 
+var investment = 1000; 
+var percent = 5/100;
+for(let i=0; i<3; i++) {
+    investment *= percent
+}
+result = { investment }
+
+User: "What's the name of the first ruler of Rome?"
+Code: 
+result = { name: \`Romulus\` }
+
+User: "Explain why my throat hurts"
+Code: 
+result = { elaborateOn: [\`Common colds or flu\`,\`Allergies\`,\`Dry air or smoke\`,\`Acid reflux\`] }
+
+User: A movie theatre has 25 rows of seats with 20 seats in each row. How many seats are there in total?
+Code:
+var seats = 25*20;
+result = { seatsTotal: seats }
+
+End of Examples.
+
+Convert user question to JavaScript code that solves it. Assign answer to 'result'.
+Output ONLY JavaScript code. NO raw text, NO explanations, NO markdown.
+`
+
         const $$ = (s) => Array.from(document.querySelectorAll(s))
         const $ = document.querySelector.bind(document)
-        const $ml = (type, opts) => {
+        const htm$ = (type, { text, attr } = {}) => {
             const e = document.createElement(type)
-            if (typeof opts === 'string') {
-                e.innerText = opts
+            if (typeof text === 'string') {
+                e.innerText = text
             }
-            if (typeof opts === "object") {
-                Object.entries(opts).map(([k, v]) => {
+            if (typeof attr === "object") {
+                Object.entries(attr).map(([k, v]) => {
                     e.setAttribute(k, v)
                 })
             }
             return e
         }
 
+        // ----------
+
+        function outputBlock(kind, $parent) {
+            const $output = htm$('article', { attr: { class: kind } })
+            $parent.appendChild($output)
+            return (text, cl) => {
+                $output.appendChild(htm$('section', { text, attr: { class: cl } }))
+            }
+        }
+
+
+        function prepareCode(code) {
+            if (code.trim().startsWith('```')) {
+                const lines = code.split('\n')
+                lines.pop()
+                lines.shift()
+                code = lines.join('\n')
+            }
+            return (`var result; \n${code};\n; return result`)
+        }
+        // ----------
+
+        const samples = [
+            `How many r letters are there in 'rare strawberry arrangement' ?`,
+            `Explain briefly how antibiotics work.`,
+            `Name 3 important European kings`,
+            `How much do I need to invest to get 10000$ on 5% yearly interest over 8 years?`,
+            `What's the square root of 123?`,
+        ];
+        const $samples = $('.samples')
+        samples.map(sample => {
+            $samples.appendChild(htm$('button', { text: sample }))
+        })
+        $samples.addEventListener('click', (e) => {
+            const text = e.target.innerText;
+            go(text);
+        })
         const $input = $("#in");
+        $input.focus();
         $input.addEventListener('keypress', (ev) => {
             if (ev.key === 'Enter') {
-                go()
+                const prompt = $input.value
+                $input.value = '';
+                go(prompt)
             }
         })
-        async function go() {
+        async function go(prompt) {
 
-            const prompt = $input.value
-            $("#out").appendChild($ml('i', prompt))
+            const $out = $("#out")
+            $out.replaceChildren(htm$('i', { text: prompt }))
 
-            let result
-            if ($("#toggle").checked) {
-
-                result = await promptThinker(prompt)
-            } else {
-
-                result = await promptRegular(prompt)
-            }
-
-            $("#out").appendChild($ml('p', result))
-
-
+            await promptRegular(prompt, outputBlock('basic', $("#out")))
+            await promptThinker(prompt, outputBlock('think', $("#out")))
         }
-        async function promptRegular(prompt) {
-            const result = await model.prompt(prompt);
-            console.log("regular prompt result", result);
-            return result
+
+        async function promptRegular(prompt, say) {
+            const modelR = await LanguageModel.create();
+            const t0 = Date.now()
+            say('thinking...', 'code')
+            const result = await modelR.prompt(prompt);
+            say(result)
+            say(`took ${((Date.now() - t0) / 1000).toFixed(2)} sec.`, 'code')
+            modelR.destroy()
         }
-        async function promptThinker(prompt) {
-            const systemPrompt = `Output ONLY JavaScript code. NO text, NO explanations, NO markdown. 
-Convert user question to JavaScript code. Assign answer to 'result'.
 
-Examples:
-User: "What is 45 plus 67?"
-Code: result = 45 + 67
+        async function promptThinker(prompt, say) {
+            const modelCode = await LanguageModel.create();
+            const modelRespond = await LanguageModel.create();
+            const t0 = Date.now()
 
-User: "How many letters u are in unbounded?"
-Code: result = "unbounded".split('').filter(c => c === 'r').length
-
-User: "How many times does U appear in unbounded?"
-Code: result = "unbounded".match(/r/ig).length
-
-User: "Is 'hello' longer than 3 characters?"
-Code: result = "hello".length > 3
-
-User: "What's 15% of 200?"
-Code: result = 200 * 0.15
-
-User: "How many words in 'the quick brown fox'?"
-Code: result = "the quick brown fox".split(' ').length
-
-User: "Does 'javascript' contain 'script'?"
-Code: result = "javascript".includes("script")
-
-User: "What is the third character of 'hello'?"
-Code: result = "hello"[2]
-
-User: "If I invest $1000 at 5% interest for 3 years, compounded annually?"
-Code: var invest = 1000; 
-for(let i=0; i<3; i++) {
-  invest *= 1.05
-}
-result = invest
-
+            say('thinking in code...', 'code')
+            let code = await modelCode.prompt(`${coderSystemPrompt}
 User: "${prompt}"
-Code: `;
-            let code = await model.prompt(systemPrompt + prompt);
-            console.log("thinking code:\n", code);
-            let f;
+Code: `);
+            say(code, 'code')
+            code = prepareCode(code)
+            let data;
             try {
-                f = new Function(`var result; ${code}; return result`)
+                f = new Function(code)
+                data = f()
             } catch (e) {
                 console.log('syntax error', e)
-                code = await model.prompt(systemPrompt + prompt + `\n Your previous attempt was not valid javascript . Creating a function from it resulted in the following error: ${e}\nThe code was:\n` + code + '\n\n fix the error. Respond only with valid javascript code.');
-                console.log("fixed thinking code", code);
+                code = await modelCode.prompt(`\n ${e}\n\n fix the error. 
+                Respond only with valid javascript code. NO explanations, NO markdown.`);
+                code = prepareCode(code)
+                say("Error. Fixed:", 'code');
+                say(code, 'code');
                 f = new Function(code)
+                data = f()
             }
-            const data = f()
-            console.log("result: ", data)
-            const result = await model.prompt(`The code you generated to fulfill the following prompt: ` + prompt + `was:\n` + code + `\n\nIt returned the following value:\n` + JSON.stringify(data) + `\n\n Formulate the final response to the user prompt based on that information.`);
-            console.log("thinking result", result);
-            return result
+
+            say(JSON.stringify(data), 'code')
+            const result = await modelRespond.prompt(`${responderSystemPromptOnce}
+Write an answer to the Q with a full sentence. Use Data below.
+Q: "${prompt}"
+Data: 
+${JSON.stringify(data)}
+Answer: 
+`);
+            // const result = await modelRespond.prompt(`# Context \n## Question\n` + prompt + `\n## JavaScript Code:\n` +  code  + `\n## Result:\n` + JSON.stringify(data) + '\n\n# Action \nRespond to user\'s question. Use the result. NO code');
+            say(result)
+            say(`took ${((Date.now() - t0) / 1000).toFixed(2)} sec.`, 'code')
+            modelRespond.destroy();
+            modelCode.destroy();
+
         }
-      
+
         async function init() {
 
             // Check if the languageModel API is available
-            if (!window.ai?.languageModel?.create) {
+            if (!LanguageModel?.create) {
                 alert("The Built-in AI API (languageModel.create) is not available.");
                 return;
             }
 
-            const availability = await window.ai.languageModel.availability();
+            const availability = await LanguageModel.availability();
             console.log("Model availability:", availability);
 
             if (availability !== 'available') {
                 console.log(`Model is not available. Status: ${availability}`);
                 return;
             }
-
-            model = await window.ai.languageModel.create();
 
         }
 
