--- a/bench.html
+++ b/bench.html
@@ -33,6 +33,8 @@
       padding: 15px;
       border-radius: 4px;
       background: white;
+      page-break-inside: avoid;
+      break-inside: avoid;
     }
 
     #out>article>section:first-child {
@@ -88,6 +90,7 @@
       padding: 5px;
     }
   </style>
+  <script src="./secure/ses.mjs"></script>
 </head>
 
 <body>
