--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
       padding: 5px;
     }
   </style>
+  <script src="./secure/ses.mjs"></script>
+  <!-- <script src="./secure/evaluatorAsk.js"></script> -->
+
 </head>
 
 <body>
