--- a/index.html
+++ b/index.html
@@ -1,99 +1,21 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
+    <head>
+        <title>Gemini Nano Test</title>
+        <link rel="stylesheet" href="./style.css" />
+        <script src="./secure/ses.mjs"></script>
+        <!-- <script src="./secure/evaluatorAsk.js"></script> -->
+    </head>
 
-<head>
-  <title>Gemini Nano Test</title>
-  <style>
-    * {
-      box-sizing: border-box;
-    }
+    <body>
+        <div class="box">
+            <div class="samples"></div>
+            <input type="text" id="in" placeholder="prompt" />
+            <div id="out"></div>
+        </div>
 
-    .box {
-      color: #333;
-      display: block;
-      margin: 15px auto;
-      max-width: 900px;
-
-      font-family: sans-serif
-    }
-
-    #out {
-      min-height: 300px;
-      background-color: #f5f5f5;
-      box-shadow: 0 0 10px 0 #ddd;
-      border-radius: 4px;
-      border: 1px solid #ddd;
-      padding: 10px;
-    }
-
-    .out {
-      display: flex;
-      gap: 10px;
-    }
-
-    .out * {
-      display: block;
-      margin: 10px 0;
-      word-wrap: break-word;
-    }
-
-    #out>i {
-      display: block;
-    }
-
-    .out>article {
-      border-top: 1px solid #aaa;
-      padding: 10px;
-      flex: 1;
-    }
-
-
-    .code {
-      color: #777;
-      font-family: monospace;
-      font-size: 0.9em;
-    }
-
-
-
-    .samples>button {
-      display: inline-block;
-      background: #ddd;
-      border-radius: 5px;
-      border: none;
-      outline: none;
-      margin: 5px;
-      cursor: pointer;
-    }
-
-    #in {
-      display: block;
-      width: 100%;
-      border: none;
-      border-top: 1px solid #aaa;
-      outline: none;
-      background: transparent;
-      margin: 10px auto;
-      padding: 5px;
-    }
-  </style>
-  <script src="./secure/ses.mjs"></script>
-  <!-- <script src="./secure/evaluatorAsk.js"></script> -->
-
-</head>
-
-<body>
-  <div class="box">
-
-    <div class="samples"></div>
-    <input type="text" id="in" placeholder="prompt">
-    <div id="out"></div>
-
-  </div>
-
-  <script type="module">
-    import './app.js';
-  </script>
-</body>
-
+        <script type="module">
+            import "./app.js";
+        </script>
+    </body>
 </html>
