--- a/bench.html
+++ b/bench.html
@@ -8,7 +8,7 @@
 
     <body class="bench">
         <div class="box">
-            <div id="out"></div>
+            <div id="out" class="out"></div>
         </div>
 
         <script type="module">
