--- a/cache.html
+++ b/cache.html
@@ -34,7 +34,7 @@
                     localStorage.clear();
                 }
             };
-            $("#cp").onclick(() => {});
+            $("#cp").onclick = () => {};
         </script>
     </body>
 </html>
